Apply new formatter